[gd_scene load_steps=3 format=3 uid="uid://contestminigame1"]

[ext_resource type="Script" path="res://src/ui/contest_minigame.gd" id="1_script"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="ContestMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="BeltTop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="BeltBackground" type="ColorRect" parent="BeltTop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="BeltLabel" type="Label" parent="BeltTop"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
text = "← Your Belt"
horizontal_alignment = 1

[node name="BeltBottom" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 400.0
offset_bottom = 500.0
grow_horizontal = 2

[node name="BeltBackground" type="ColorRect" parent="BeltBottom"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.35, 0.3, 0.3, 1)

[node name="BeltLabel" type="Label" parent="BeltBottom"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
text = "CPU Belt →"
horizontal_alignment = 1

[node name="PlayerSprite" type="Control" parent="."]
anchors_preset = 0
offset_left = 180.0
offset_top = 300.0
offset_right = 220.0
offset_bottom = 340.0

[node name="Visual" type="ColorRect" parent="PlayerSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 1)

[node name="Label" type="Label" parent="PlayerSprite"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
text = "YOU"
horizontal_alignment = 1

[node name="CPUSprite" type="Control" parent="."]
anchors_preset = 0
offset_left = 580.0
offset_top = 300.0
offset_right = 620.0
offset_bottom = 340.0

[node name="Visual" type="ColorRect" parent="CPUSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Label" type="Label" parent="CPUSprite"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
grow_horizontal = 2
text = "CPU"
horizontal_alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "1:30"
horizontal_alignment = 1

[node name="PlayerScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 20
text = "You: 0"

[node name="CPUScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "CPU: 0"
horizontal_alignment = 2

[node name="PlayerFullnessBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 50.0
offset_top = 550.0
offset_right = 250.0
offset_bottom = 575.0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="PlayerFullnessLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 50.0
offset_top = 525.0
offset_right = 250.0
offset_bottom = 550.0
text = "Fullness"

[node name="CPUFullnessBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 550.0
offset_right = -50.0
offset_bottom = 575.0
grow_horizontal = 0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="CPUFullnessLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 525.0
offset_right = -50.0
offset_bottom = 550.0
grow_horizontal = 0
text = "CPU Fullness"
horizontal_alignment = 2

[node name="PlayerStackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 260.0
offset_top = 550.0
offset_right = 310.0
offset_bottom = 575.0
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = ""

[node name="CPUStackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 550.0
offset_right = -260.0
offset_bottom = 575.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = ""
horizontal_alignment = 2

[node name="HintLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "W/S: Move | E: Grab | Q: Quit"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MashIndicator" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MashLabel" type="Label" parent="UI/MashIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 24
text = "MASH E!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/ResultPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ResultLabel" type="Label" parent="UI/ResultPanel/MarginContainer"]
layout_mode = 2
text = "VICTORY!

Your Score: 1500
CPU Score: 1200

Rewards:
  $150
  +10 XP
  +50 Followers

Press E to continue"
horizontal_alignment = 1
